repaired menu bar from small spaces and link with for collapsed menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -312,6 +312,11 @@ nav ul li a.disabled:hover {
 		height: 0;
 		visibility: collapse;
 	}
+
+  nav ul li a {
+    width: 100%;
+    padding: 0px;
+}
 	
 	nav ul li.active {
 		width: auto;
